--- a/www.nobuto-murata.org.conf
+++ b/www.nobuto-murata.org.conf
@@ -31,6 +31,11 @@
 
     SSLEngine on
     Header set Strict-Transport-Security "max-age=31536000"
+    Header set Content-Security-Policy "default-src 'self'; style-src 'self' fonts.googleapis.com maxcdn.bootstrapcdn.com; font-src fonts.gstatic.com maxcdn.bootstrapcdn.com"
+    Header set X-Frame-Options "DENY"
+    Header set X-XSS-Protection "1; mode=block"
+    Header set X-Content-Type-Options "nosniff"
+
     SSLCertificateFile /etc/letsencrypt/live/www.nobuto-murata.org/fullchain.pem
     SSLCertificateKeyFile /etc/letsencrypt/live/www.nobuto-murata.org/privkey.pem
     Include /etc/letsencrypt/options-ssl-apache.conf
