--- a/www.nobuto-murata.org.conf
+++ b/www.nobuto-murata.org.conf
@@ -18,6 +18,26 @@
         Options -Indexes
     </Directory>
 
+<VirtualHost *:80>
+    ServerName www.nobuto-murata.org
+    ServerAlias nobuto-murata.org
+
+    Redirect permanent "/" "https://www.nobuto-murata.org/"
+</VirtualHost>
+
+<VirtualHost *:443>
+    ServerName www.nobuto-murata.org
+    ServerAlias nobuto-murata.org
+
+    <If "req('Host') != 'www.nobuto-murata.org'">
+        Redirect permanent "/" "https://www.nobuto-murata.org/"
+    </If>
+
+    DocumentRoot /var/www/www.nobuto-murata.org
+    <Directory /var/www/www.nobuto-murata.org>
+        Options -Indexes
+    </Directory>
+
     RedirectMatch 404 "/\."
     ErrorDocument 404 "/404.html"
     <Location "/404.html">
@@ -30,6 +50,7 @@
     CustomLog ${APACHE_LOG_DIR}/access.log combined
 
     SSLEngine on
+    Header set Cache-Control "max-age=0"
     Header set Strict-Transport-Security "max-age=31536000"
     Header set Content-Security-Policy "default-src 'self'; style-src 'self' fonts.googleapis.com maxcdn.bootstrapcdn.com; font-src fonts.gstatic.com maxcdn.bootstrapcdn.com"
     Header set X-Frame-Options "DENY"
