don't redirect with wildcard

--- a/www.nobuto-murata.org.conf
+++ b/www.nobuto-murata.org.conf
@@ -1,8 +1,9 @@
 <VirtualHost *:80>
     ServerName www.nobuto-murata.org
     ServerAlias nobuto-murata.org
-
-    Redirect permanent "/" "https://www.nobuto-murata.org/"
+    <If "%{HTTP_HOST} in { 'nobuto-murata.org', 'www.nobuto-murata.org' }">
+        Redirect permanent "/" "https://www.nobuto-murata.org/"
+    </If>
 </VirtualHost>
 
 <VirtualHost *:443>
