--- a/www.nobuto-murata.org.conf
+++ b/www.nobuto-murata.org.conf
@@ -1,9 +1,19 @@
 <VirtualHost *:80>
     ServerName www.nobuto-murata.org
     ServerAlias nobuto-murata.org
+
+    ErrorLog ${APACHE_LOG_DIR}/error.log
+    CustomLog ${APACHE_LOG_DIR}/access.log combined
+
     <If "%{HTTP_HOST} in { 'nobuto-murata.org', 'www.nobuto-murata.org' }">
         Redirect permanent "/" "https://www.nobuto-murata.org/"
     </If>
+
+    # fall back for letsencrypt certonly --webroot
+    DocumentRoot /var/www/html
+    <Directory /var/www/html>
+        Options -Indexes
+    </Directory>
 </VirtualHost>
 
 <VirtualHost *:443>
