non-default dir

--- a/www.nobuto-murata.org.conf
+++ b/www.nobuto-murata.org.conf
@@ -10,8 +10,8 @@
     </If>
 
     # fall back for letsencrypt certonly --webroot
-    DocumentRoot /var/www/html
-    <Directory /var/www/html>
+    DocumentRoot /var/www/acme
+    <Directory /var/www/acme>
         Options -Indexes
     </Directory>
 </VirtualHost>
