--- a/www.nobuto-murata.org.conf
+++ b/www.nobuto-murata.org.conf
@@ -50,5 +50,7 @@
 
     SSLCertificateFile /etc/letsencrypt/live/www.nobuto-murata.org/fullchain.pem
     SSLCertificateKeyFile /etc/letsencrypt/live/www.nobuto-murata.org/privkey.pem
-    Include /etc/letsencrypt/options-ssl-apache.conf
+    <If "-f '/etc/letsencrypt/options-ssl-apache.conf'">
+        Include /etc/letsencrypt/options-ssl-apache.conf
+    </If>
 </VirtualHost>
