--- a/www.nobuto-murata.org.conf
+++ b/www.nobuto-murata.org.conf
@@ -48,9 +48,9 @@
     Header set X-XSS-Protection "1; mode=block"
     Header set X-Content-Type-Options "nosniff"
 
-    SSLCertificateFile /etc/letsencrypt/live/www.nobuto-murata.org/fullchain.pem
-    SSLCertificateKeyFile /etc/letsencrypt/live/www.nobuto-murata.org/privkey.pem
-    <If "-f '/etc/letsencrypt/options-ssl-apache.conf'">
+    <If "-d '/etc/letsencrypt/live/'">
+        SSLCertificateFile /etc/letsencrypt/live/www.nobuto-murata.org/fullchain.pem
+        SSLCertificateKeyFile /etc/letsencrypt/live/www.nobuto-murata.org/privkey.pem
         Include /etc/letsencrypt/options-ssl-apache.conf
     </If>
 </VirtualHost>
