--- a/www.nobuto-murata.org.conf
+++ b/www.nobuto-murata.org.conf
@@ -42,5 +42,5 @@
 
     SSLCertificateFile /etc/letsencrypt/live/www.nobuto-murata.org/fullchain.pem
     SSLCertificateKeyFile /etc/letsencrypt/live/www.nobuto-murata.org/privkey.pem
-    Include /etc/letsencrypt/options-ssl-apache.conf
+    Include /usr/lib/python2.7/dist-packages/letsencrypt_apache/options-ssl-apache.conf
 </VirtualHost>
