survive letsencrypt renewal

--- a/www.nobuto-murata.org.conf
+++ b/www.nobuto-murata.org.conf
@@ -5,7 +5,14 @@
     ErrorLog ${APACHE_LOG_DIR}/error.log
     CustomLog ${APACHE_LOG_DIR}/access.log combined
 
-    Redirect permanent "/" "https://www.nobuto-murata.org/"
+    DocumentRoot /var/www/acme
+    <Directory /var/www/acme>
+        Options -Indexes
+    </Directory>
+
+    <LocationMatch "^/(?!.well-known/)">
+        Redirect permanent "/" "https://www.nobuto-murata.org/"
+    </LocationMatch>
 </VirtualHost>
 
 <VirtualHost *:433>
