--- a/roles/common/tasks/apt.yml
+++ b/roles/common/tasks/apt.yml
@@ -3,7 +3,7 @@
   debconf:
     name: libc6
     question: libraries/restart-without-asking
-    value: 'true'
+    value: true
     vtype: boolean
 
 - name: apt update
