default value is false so no need to mark it as seen explicitly

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,17 +1,10 @@
 ---
-- name: auto-restart services on package update
+- name: debconf auto-restart services on package update
   debconf:
     name: libc6
     question: libraries/restart-without-asking
     value: 'true'
     vtype: boolean
-
-- name: explicitly mark auto-restart as seen
-  debconf:
-    name: libc6
-    question: libraries/restart-without-asking
-    value: 'true'
-    vtype: seen
 
 - name: apt update
   apt:
