--- a/roles/web_irc/tasks/main.yml
+++ b/roles/web_irc/tasks/main.yml
@@ -2,6 +2,7 @@
 - name: get thelounge
   get_url:
     url: https://github.com/thelounge/thelounge/releases/download/v3.2.0/thelounge_3.2.0-1_all.deb
+    checksum: 'sha256:42a130b57395fdcd0f3b966f5e01375fc56ae12fc7281b1927cd88d99ba68df6'
     dest: /root/
   register: thelounge_deb
 
