--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -19,3 +19,16 @@
   apt:
     name: etckeeper
     state: present
+
+- name: enable ufw but allow everything
+  ufw:
+    state: enabled
+    default: allow
+
+- name: get ssh ports
+  command: "grep '^Port ' /etc/ssh/sshd_config | awk '{print $2}'"
+  register: ssh_ports
+
+- name: ufw limit ssh
+  command: ufw limit {{ item }}/tcp comment ssh
+  with_items: {{ ssh_ports.stdout_lines | default(22) }}
