--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -33,7 +33,7 @@
 - name: ufw limit ssh
   ufw:
     rule: limit
-    port: {{ item }}
+    port: "{{ item }}"
     proto: tcp
     comment: ssh
   with_items: "{{ ssh_ports.stdout_lines | default(22) }}"
