use 22 when the variable is empty instead of undefined

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -36,4 +36,4 @@
     port: "{{ item }}"
     proto: tcp
     comment: ssh
-  with_items: "{{ ssh_ports.stdout_lines | default(22) }}"
+  with_items: "{{ ssh_ports.stdout_lines | default(22, true) }}"
