--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -37,3 +37,12 @@
     proto: tcp
     comment: ssh
   with_items: "{{ ssh_ports.stdout_lines | default(22, true) }}"
+
+- name: ufw limit ssh on lo for demultiplexer
+  ufw:
+    rule: limit
+    port: "{{ item }}"
+    proto: tcp
+    interface: lo
+    comment: 'ssh on lo'
+  with_items: "{{ ssh_ports.stdout_lines | default(22, true) }}"
