--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -9,7 +9,7 @@
 - name: auto reboot with unattended-upgrades
   lineinfile:
     path: /etc/apt/apt.conf.d/50unattended-upgrades
-    regex: 'Unattended-Upgrade::Automatic-Reboot ';
+    regex: 'Unattended-Upgrade::Automatic-Reboot '
     line: 'Unattended-Upgrade::Automatic-Reboot "true";'
 
 - name: apt update
