expose apache http without sslh to simplify certbot process

--- a/roles/demultiplexer/files/sslh.cfg
+++ b/roles/demultiplexer/files/sslh.cfg
@@ -5,16 +5,14 @@ user: "sslh";
 
 listen:
 (
-    { host: "0.0.0.0"; port: "80"; },
     { host: "0.0.0.0"; port: "443"; }
 );
 
 protocols:
 (
      { name: "ssh"; host: "localhost"; port: "22"; },
-     { name: "http"; host: "localhost"; port: "70"; },
      { name: "tls"; host: "localhost"; port: "433"; },
      { name: "openvpn"; host: "localhost"; port: "1194"; }
 );
 
-on-timeout: "http";
+on-timeout: "tls";
