reverse proxy for thelounge

--- a/local.yml
+++ b/local.yml
@@ -1,6 +1,12 @@
 ---
 - hosts: localhost
 
+  vars_prompt:
+    - name: web_irc_fqdn
+      prompt: 'FQDN for hosting web irc'
+      default: thelounge.localhost.localdomain
+      private: no
+
   roles:
     - role: common
       become: yes
