--- a/roles/web_irc/templates/thelounge.apache2.conf
+++ b/roles/web_irc/templates/thelounge.apache2.conf
@@ -1,6 +1,8 @@
 <VirtualHost *:433>
     ServerName {{ web_irc_fqdn }}
 
+    SSLEngine on
+
     # https://thelounge.chat/docs/guides/reverse-proxies#apache
     RewriteEngine On
     RewriteCond %{REQUEST_URI}  ^/socket.io            [NC]
