--- a/roles/web_irc/tasks/main.yml
+++ b/roles/web_irc/tasks/main.yml
@@ -50,7 +50,7 @@
   register: thelounge_rproxy
 
 - name: apache2 reload
-  systemctl:
+  systemd:
     name: apache2
     state: reloaded
   when: thelounge_rproxy is changed
