--- a/roles/web_irc/templates/thelounge.apache2.conf
+++ b/roles/web_irc/templates/thelounge.apache2.conf
@@ -5,8 +5,6 @@
 <VirtualHost *:433>
     ServerName {{ web_irc_fqdn }}
 
-    SSLEngine on
-
     # https://thelounge.chat/docs/guides/reverse-proxies#apache
     RewriteEngine On
     RewriteCond %{REQUEST_URI}  ^/socket.io            [NC]
@@ -20,5 +18,5 @@
     ProxyPassReverse / http://127.0.0.1:9000/
 
     # By default Apache times out connections after one minute
-    ProxyTimeout 86400 # 1 day
+    ProxyTimeout 86400
 </VirtualHost>
