certonly as certbot can add 443 related config

--- a/roles/web_irc/templates/thelounge.apache2.conf
+++ b/roles/web_irc/templates/thelounge.apache2.conf
@@ -5,6 +5,10 @@
 <VirtualHost *:433>
     ServerName {{ web_irc_fqdn }}
 
+    SSLCertificateFile /etc/letsencrypt/live/{{ web_irc_fqdn }}/fullchain.pem
+    SSLCertificateKeyFile /etc/letsencrypt/live/{{ web_irc_fqdn }}/privkey.pem
+    Include /etc/letsencrypt/options-ssl-apache.conf
+
     # https://thelounge.chat/docs/guides/reverse-proxies#apache
     RewriteEngine On
     RewriteCond %{REQUEST_URI}  ^/socket.io            [NC]
