--- a/roles/web_irc/templates/thelounge.apache2.conf
+++ b/roles/web_irc/templates/thelounge.apache2.conf
@@ -1,5 +1,17 @@
 <VirtualHost *:80>
     ServerName {{ web_irc_fqdn }}
+
+    ErrorLog ${APACHE_LOG_DIR}/error.log
+    CustomLog ${APACHE_LOG_DIR}/access.log combined
+
+    DocumentRoot /var/www/nonexistent
+    <Directory /var/www/nonexistent>
+        Options -Indexes
+    </Directory>
+
+    #<LocationMatch "^/(?!.well-known/)">
+        Redirect permanent "/" "https://{{ web_irc_fqdn }}/"
+    #</LocationMatch>
 </VirtualHost>
 
 <VirtualHost *:433>
