--- a/roles/reverse_proxy/tasks/main.yml
+++ b/roles/reverse_proxy/tasks/main.yml
@@ -30,8 +30,11 @@
 
 - name: disable the default site
   file:
-    path: /etc/apache2/sites-enabled/000-default.conf
+    path: "{{ item }}"
     state: absent
+  with_items:
+    - /etc/apache2/sites-enabled/000-default.conf
+    - /var/www/html/index.html
 
 - name: restart apache2
   systemd:
