--- a/roles/web_irc/templates/thelounge.apache2.conf
+++ b/roles/web_irc/templates/thelounge.apache2.conf
@@ -2,16 +2,9 @@
     ServerName {{ web_irc_fqdn }}
 
     ErrorLog ${APACHE_LOG_DIR}/error.log
-    CustomLog ${APACHE_LOG_DIR}/access.log combined
+    CustomLog ${APACHE_LOG_DIR}/access.log vhost_combined
 
-    DocumentRoot /var/www/nonexistent
-    <Directory /var/www/nonexistent>
-        Options -Indexes
-    </Directory>
-
-    #<LocationMatch "^/(?!.well-known/)">
-        Redirect permanent "/" "https://{{ web_irc_fqdn }}/"
-    #</LocationMatch>
+    Redirect permanent "/" "https://{{ web_irc_fqdn }}/"
 </VirtualHost>
 
 <VirtualHost *:433>
