--- a/roles/web_irc/templates/thelounge.apache2.conf
+++ b/roles/web_irc/templates/thelounge.apache2.conf
@@ -10,6 +10,9 @@
 <VirtualHost *:433>
     ServerName {{ web_irc_fqdn }}
 
+    SSLEngine on
+    Header set Strict-Transport-Security "max-age=31536000"
+
     SSLCertificateFile /etc/letsencrypt/live/{{ web_irc_fqdn }}/fullchain.pem
     SSLCertificateKeyFile /etc/letsencrypt/live/{{ web_irc_fqdn }}/privkey.pem
     Include /etc/letsencrypt/options-ssl-apache.conf
