--- a/roles/web_irc/templates/thelounge.apache2.conf
+++ b/roles/web_irc/templates/thelounge.apache2.conf
@@ -12,6 +12,7 @@
 
     SSLEngine on
     Header set Strict-Transport-Security "max-age=31536000"
+    Header set X-Frame-Options "DENY"
 
     SSLCertificateFile /etc/letsencrypt/live/{{ web_irc_fqdn }}/fullchain.pem
     SSLCertificateKeyFile /etc/letsencrypt/live/{{ web_irc_fqdn }}/privkey.pem
