set Servername to work

--- a/roles/reverse_proxy/files/000-fallback.apache2.conf
+++ b/roles/reverse_proxy/files/000-fallback.apache2.conf
@@ -1,4 +1,5 @@
 <VirtualHost *:*>
+    Servername nonexistent.localdomain
     DocumentRoot /var/www/nonexistent
 
     ErrorLog ${APACHE_LOG_DIR}/error.log
