--- a/roles/reverse_proxy/files/000-fallback.apache2.conf
+++ b/roles/reverse_proxy/files/000-fallback.apache2.conf
@@ -5,7 +5,7 @@
     ErrorLog ${APACHE_LOG_DIR}/error.log
     CustomLog ${APACHE_LOG_DIR}/access.log vhost_combined
 
-    #<Directory /var/www/nonexistent>
-    #    Options -Indexes
-    #</Directory>
+    <Directory /var/www/nonexistent>
+        Options -Indexes
+    </Directory>
 </VirtualHost>
