--- a/roles/reverse_proxy/files/000-fallback.apache2.conf
+++ b/roles/reverse_proxy/files/000-fallback.apache2.conf
@@ -1,11 +1,7 @@
-<VirtualHost *:*>
+<VirtualHost *:80>
     Servername nonexistent.localdomain
     DocumentRoot /var/www/nonexistent
 
     ErrorLog ${APACHE_LOG_DIR}/error.log
     CustomLog ${APACHE_LOG_DIR}/access.log vhost_combined
-
-    <Directory /var/www/nonexistent>
-        Options -Indexes
-    </Directory>
 </VirtualHost>
