--- a/roles/web_irc/templates/thelounge.apache2.conf
+++ b/roles/web_irc/templates/thelounge.apache2.conf
@@ -10,6 +10,9 @@
 <VirtualHost *:433>
     ServerName {{ web_irc_fqdn }}
 
+    ErrorLog ${APACHE_LOG_DIR}/error.log
+    CustomLog ${APACHE_LOG_DIR}/access.log vhost_combined
+
     SSLEngine on
     Header set Strict-Transport-Security "max-age=31536000"
     Header set X-Frame-Options "DENY"
