add fallback https response with snakeoil

--- a/roles/reverse_proxy/files/000-fallback.apache2.conf
+++ b/roles/reverse_proxy/files/000-fallback.apache2.conf
@@ -2,3 +2,12 @@
     Servername nonexistent.localdomain
     DocumentRoot /var/www/nonexistent
 </VirtualHost>
+
+<VirtualHost *:433>
+    Servername nonexistent.localdomain
+    DocumentRoot /var/www/nonexistent
+
+    SSLEngine on
+    SSLCertificateFile      /etc/ssl/certs/ssl-cert-snakeoil.pem
+    SSLCertificateKeyFile /etc/ssl/private/ssl-cert-snakeoil.key
+</VirtualHost>
