enable http->https redirection for the base domain
So HSTS can be activated for the base domain without "www".

--- a/www.nobuto-murata.org.conf
+++ b/www.nobuto-murata.org.conf
@@ -11,7 +11,8 @@
     </Directory>
 
     <LocationMatch "^/(?!.well-known/)">
-        Redirect permanent "/" "https://www.nobuto-murata.org/"
+        RewriteEngine On
+        RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
     </LocationMatch>
 </VirtualHost>
 
