--- a/www.nobuto-murata.org.conf
+++ b/www.nobuto-murata.org.conf
@@ -10,10 +10,9 @@
         Options -Indexes
     </Directory>
 
-    <LocationMatch "^/(?!.well-known/)">
-        RewriteEngine On
-        RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-    </LocationMatch>
+    RewriteEngine On
+    RewriteCond "%{REQUEST_URI}" "!^/\.well-known/"
+    RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 </VirtualHost>
 
 <VirtualHost *:433>
