--- a/www.nobuto-murata.org.conf
+++ b/www.nobuto-murata.org.conf
@@ -42,10 +42,12 @@
     SSLEngine on
     Header set Cache-Control "max-age=0"
     Header set Strict-Transport-Security "max-age=31536000"
-    Header set Content-Security-Policy "default-src 'self'; style-src 'self' fonts.googleapis.com maxcdn.bootstrapcdn.com; font-src fonts.gstatic.com maxcdn.bootstrapcdn.com"
+    Header set Content-Security-Policy "default-src 'none'; style-src 'self' fonts.googleapis.com maxcdn.bootstrapcdn.com; font-src fonts.gstatic.com maxcdn.bootstrapcdn.com;"
+    Header set Content-Security-Policy "frame-ancestors 'none';"
     Header set X-Frame-Options "DENY"
     Header set X-XSS-Protection "1; mode=block"
     Header set X-Content-Type-Options "nosniff"
+    Header set Referrer-Policy "no-referrer, strict-origin-when-cross-origin"
 
     SSLCertificateFile /etc/letsencrypt/live/www.nobuto-murata.org/fullchain.pem
     SSLCertificateKeyFile /etc/letsencrypt/live/www.nobuto-murata.org/privkey.pem
