explicit img-src

--- a/www.nobuto-murata.org.conf
+++ b/www.nobuto-murata.org.conf
@@ -42,7 +42,7 @@
     SSLEngine on
     Header set Cache-Control "max-age=0"
     Header set Strict-Transport-Security "max-age=31536000"
-    Header set Content-Security-Policy "default-src 'none'; style-src 'self' fonts.googleapis.com maxcdn.bootstrapcdn.com; font-src fonts.gstatic.com maxcdn.bootstrapcdn.com;"
+    Header set Content-Security-Policy "default-src 'none'; img-src 'self'; style-src 'self' fonts.googleapis.com maxcdn.bootstrapcdn.com; font-src fonts.gstatic.com maxcdn.bootstrapcdn.com;"
     Header set X-Frame-Options "DENY"
     Header set X-XSS-Protection "1; mode=block"
     Header set X-Content-Type-Options "nosniff"
