System's apache.conf is obsolete
/usr/lib/python2.7/dist-packages/certbot_apache/options-ssl-apache.conf

So let's use Mozilla's SSL configuration generator instead.

--- a/www.nobuto-murata.org.conf
+++ b/www.nobuto-murata.org.conf
@@ -12,7 +12,7 @@
 
     RewriteEngine On
     RewriteCond "%{REQUEST_URI}" "!^/\.well-known/"
-    RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+    RewriteRule ^(.*)$ https://%{HTTP_HOST}$1 [R=301,L]
 </VirtualHost>
 
 <VirtualHost *:433>
@@ -39,7 +39,6 @@
     ErrorLog ${APACHE_LOG_DIR}/error.log
     CustomLog ${APACHE_LOG_DIR}/access.log combined
 
-    SSLEngine on
     Header set Cache-Control "max-age=0"
     Header set Strict-Transport-Security "max-age=31536000"
     Header set Content-Security-Policy "default-src 'none'; img-src 'self'; frame-ancestors 'none'; style-src 'self' fonts.googleapis.com maxcdn.bootstrapcdn.com; font-src fonts.gstatic.com maxcdn.bootstrapcdn.com;"
@@ -48,7 +47,11 @@
     Header set X-Content-Type-Options "nosniff"
     Header set Referrer-Policy "no-referrer, strict-origin-when-cross-origin"
 
+    SSLEngine on
     SSLCertificateFile /etc/letsencrypt/live/www.nobuto-murata.org/fullchain.pem
     SSLCertificateKeyFile /etc/letsencrypt/live/www.nobuto-murata.org/privkey.pem
-    Include /usr/lib/python2.7/dist-packages/certbot_apache/options-ssl-apache.conf
+
+    SSLProtocol             all -SSLv3 -TLSv1 -TLSv1.1
+    SSLCipherSuite          ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384
+    SSLHonorCipherOrder     off
 </VirtualHost>
