--- a/roles/demultiplexer/files/sslh.cfg
+++ b/roles/demultiplexer/files/sslh.cfg
@@ -11,8 +11,7 @@ listen:
 protocols:
 (
      { name: "tls"; host: "localhost"; port: "433"; },
-     { name: "ssh"; host: "localhost"; port: "22"; },
-     { name: "openvpn"; host: "localhost"; port: "1194"; }
+     { name: "ssh"; host: "localhost"; port: "22"; }
 );
 
 on-timeout: "tls";
