Enable www-home

--- a/roles/web/files/sites-available/www-home.conf
+++ b/roles/web/files/sites-available/www-home.conf
@@ -25,8 +25,8 @@
         Redirect permanent "/" "https://www.nobuto-murata.org/"
     </If>
 
-    DocumentRoot /var/www/www.nobuto-murata.org
-    <Directory /var/www/www.nobuto-murata.org>
+    DocumentRoot /var/www/www-home
+    <Directory /var/www/www-home>
         Options -Indexes
     </Directory>
 
