--- a/roles/web/tasks/main.yml
+++ b/roles/web/tasks/main.yml
@@ -55,16 +55,10 @@
     src: files/www-home/
     dest: /var/www/www-home/
 
-- name: set www-home site
+- name: install www-home site but not enable it
   copy:
     src: files/sites-available/www-home.conf
     dest: /etc/apache2/sites-available/www-home.conf
-
-- name: enable fallback site
-  file:
-    src: /etc/apache2/sites-available/www-home.conf
-    dest: /etc/apache2/sites-enabled/www-home.conf
-    state: link
 
 - name: reload apache2
   systemd:
