--- a/roles/web/files/sites-available/www-home.conf
+++ b/roles/web/files/sites-available/www-home.conf
@@ -17,6 +17,7 @@
 
 <VirtualHost *:433>
     SSLEngine on
+    Protocols h2 http/1.1
 
     ServerName www.nobuto-murata.org
     ServerAlias nobuto-murata.org
