recover bootstrap.css

--- a/roles/web/files/sites-available/www-home.conf
+++ b/roles/web/files/sites-available/www-home.conf
@@ -44,7 +44,7 @@
 
     Header set Cache-Control "max-age=0"
     Header set Strict-Transport-Security "max-age=31536000"
-    Header set Content-Security-Policy "default-src 'none'; img-src 'self'; frame-ancestors 'none'; style-src 'self' fonts.googleapis.com cdnjs.cloudflare.com; font-src fonts.gstatic.com cdnjs.cloudflare.com;"
+    Header set Content-Security-Policy "default-src 'none'; img-src 'self'; frame-ancestors 'none'; style-src 'self' fonts.googleapis.com maxcdn.bootstrapcdn.com cdnjs.cloudflare.com; font-src fonts.gstatic.com cdnjs.cloudflare.com;"
     Header set X-Frame-Options "DENY"
     Header set X-XSS-Protection "1; mode=block"
     Header set X-Content-Type-Options "nosniff"
