--- a/roles/prometheus/tasks/main.yml
+++ b/roles/prometheus/tasks/main.yml
@@ -17,3 +17,9 @@
         - job_name: node
           static_configs:
           - targets: ['localhost:9100']
+
+- name: restart prometheus
+  systemd:
+    name: snap.prometheus.prometheus
+    state: restarted
+  changed_when: False
